- more DbAdapter refactoring - add guessing logic to DuckDbReadable